tests/purs/failing/RowDiffs/D.purs
module RowDiffs.D where

d = [ { a: 1
      , b: 2 -- test
      }
    , { a: 1 }
]
